IMPROVE GENERATION CONTRACT PROCESS
